<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imagen_splashscreen"
            android:layout_width="185dp"
            android:layout_height="185dp"
            android:src="@drawable/asd"
            app:srcCompat="@drawable/asd" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="40dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textColor="@color/rojo"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/Bnv"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textSize="18sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Correo"
            android:textAlignment="center"
            android:textColor="@color/verde"
            android:textSize="18sp">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:textColorHint="@color/blanco">

            <EditText
                android:id="@+id/CorreoEJ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="10dp"
                android:hint="@string/CorreoEJ"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="12dp"
                android:paddingBottom="10dp"
                android:textColor="@color/blanco">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Contra"
            android:textAlignment="center"
            android:textColor="@color/verde"
            android:textSize="18sp">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:textColorHint="@color/blanco"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dorado">

            <EditText
                android:id="@+id/EjC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:drawableStart="@drawable/icono_contrasena"
                android:drawablePadding="10dp"
                android:hint="@string/EjC"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="12dp"
                android:paddingBottom="10dp"
                android:textColor="@color/blanco">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/IN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/rojo"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/IN"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textSize="18sp"
            app:cornerRadius="5dp">

        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:text="@string/NTC"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textSize="18sp">

        </TextView>

        <TextView
            android:id="@+id/RegistroBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/RegistroBTN"
            android:textAlignment="center"
            android:textColor="@color/dorado"
            android:textSize="21sp"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:id="@+id/imagen_logo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            app:srcCompat="@drawable/logo" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>